Fixed Overflow Width

--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ body {
 
 .header {
   font-weight: 400;
+  width: 700px;
 }
 
 .author {
